syntax = "proto3";
package pod2nsm;

// NETWORK SERVICES

message DiscoverServiceRequest {
    map<string, string> labels = 1;
}

message ServiceDiscoveryResponse {
    repeated string service_ids = 1;
}

message PublishServiceRequest {
    map<string, string> labels = 1;
}

message PublishServiceResponse {
    string service_id = 1;
}

message DelistServiceRequest {
    string service_id = 1;
}

message DelistServiceResponse {
}

message ExposeChannelRequest {
    map<string, string> labels = 1;
}

message ExposeChannelResponse {
    string channel_id = 1;
}

message ConcealChannelRequest {
    string channel_id = 1;
}

message ConcealChannelResponse {
}

message CreateConnectionRequest {
    map<string, string> labels = 1;
}

message CreateConnectionResponse {
    string connection_id = 1;
}

message DestroyConnectionRequest {
    string connection_id = 1;
}

message DestroyConnectionResponse {
}

service NetworkServices {
    rpc DiscoverService (DiscoverServiceRequest) returns (ServiceDiscoveryResponse);
    rpc PublishService (PublishServiceRequest) returns (PublishServiceResponse);
    rpc DelistService (DelistServiceRequest) returns (DelistServiceResponse);

    rpc ExposeChannel (ExposeChannelRequest) returns (ExposeChannelResponse);
    rpc ConcealChannel (ConcealChannelRequest) returns (ConcealChannelResponse);

    rpc CreateConnection (CreateConnectionRequest) returns (CreateConnectionResponse);
    rpc DestroyConnection (DestroyConnectionRequest) returns (DestroyConnectionResponse);
}
